--- a/code/js/package.json
+++ b/code/js/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "corso_javascript",
-  "version": "1.0.0",
+  "name": "js",
+  "version": "0.0.1",
   "description": "",
   "main": "moduli_npm.js",
   "dependencies": {
-    "moment": "^2.27.0"
+    "moment": "^2.28.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Bonacina Alberto",
-  "license": "ISC"
+  "author": "Alberto",
+  "license": "MIT"
 }
